[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/controlswithsound/SoundButton.gd" type="Script" id=1]
[ext_resource path="res://src/ui/ConfigPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/battle/GameOptionsPanel.gd" type="Script" id=3]

[node name="GameOptionsPanel" type="PopupPanel"]
visible = true
margin_right = 84.0
margin_bottom = 110.0
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="VBoxContainer"]
margin_right = 78.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )
text = "Options"
script = ExtResource( 1 )

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 78.0
margin_bottom = 50.0
rect_min_size = Vector2( 48, 24 )
text = "To Main Menu"
script = ExtResource( 1 )

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 78.0
margin_bottom = 76.0
rect_min_size = Vector2( 48, 24 )
text = "Quit"
script = ExtResource( 1 )

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 78.0
margin_bottom = 102.0
rect_min_size = Vector2( 48, 24 )
text = "Back to Game"
script = ExtResource( 1 )
sound_type = 1

[node name="ConfigPanel" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 3.0
margin_top = 3.0
margin_right = 81.0
margin_bottom = 107.0

[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
